Actualizacion del Readme

--- a/src/style.css
+++ b/src/style.css
@@ -161,6 +161,10 @@ select, #text-search {
         text-align: center;
         padding: 20px;
     }
+
+    img{
+        margin: 20px;
+    }
     
     
 }
